src/test/ui/nll/ty-outlives/projection-where-clause-none.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/projection-where-clause-none.rs:8:15
   |
LL | trait MyTrait<'a> {
   |              -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

error[E0309]: the parameter type `T` may not live long enough
  --> $DIR/projection-where-clause-none.rs:16:5
   |
LL |     bar::<T::Output>()
   |     ^^^^^^^^^^^^^^^^
   |
   = help: consider adding an explicit lifetime bound `T: 'a`...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0309`.
